
syntax = "proto3";
package protomsg;

// 坐标
message CityCoord
{
  int32 x = 1;
  int32 y = 2;
}

message RequestBuilding
{
  uint32 construction_type = 1; // 建筑配置ID
  uint32 level          = 2;  // 要求等级
}

enum ConstructionType
{
  kConstructionType_None  = 0;
  kConstructionType_MainCastle = 1000;    // 主堡
  kConstructionType_ScienceCenter = 1001; // 科技研究院
  kConstructionType_CityWall = 1002;      // 城墙
  kConstructionType_UnionCenter = 1003;   //联盟中心
  kConstructionType_Farm = 1004;          // 农场
  kConstructionType_Wood = 1005;          // 木材厂
  kConstructionType_Steel = 1006;         // 炼钢厂
  kConstructionType_Oil   = 1007;         // 炼油厂
  kConstructionType_WarCenter = 1008;     // 战争中心

  kConstructionType_StoreHouse = 1009;    //仓库
  kConstructionType_Barrack = 1010;       //兵营
  kConstructionType_Police = 1012;        //警察局
  kConstructionType_WatchTower = 1013;    //警戒塔
  kConstructionType_ScoutCamp = 1028;    // 侦察营
  kConstructionType_Radar = 1029;    	// 雷达情报战
  kConstructionType_TradingPost= 1031;   // 贸易站
  kConstructionType_Hospital = 1032;    // 医院
  kConstructionType_SeekTalent = 1041;        // 求贤所
  kConstructionType_Mintage = 1042;        // 铸币所
}

// 建筑状态
enum BuildingStatus
{
  kBuildingStatus_None = 0;       // 未建设
  kBuildingStatus_Upgrading = 1;  // 升级中
  kBuildingStatus_WaitActive = 2; // 待激活
  kBuildingStatus_Normal = 3;     // 正常
  kBuildingStatus_Removing = 4;   // 正在移除中
}

// 建筑信息
message BuildingInfo
{
  uint32  id  = 1;  // 建筑动态ID
  uint32 type = 2; // 建筑类型
  uint32  level = 3;             // 等级
  CityCoord position = 4;        // 占用位置
  BuildingStatus status = 5;     // 状态
  int64 remove_time = 6;         // 移除时间戳
}

// 建筑工作信息
message BuildWorkInfo
{
  uint32 id		      = 1;
	uint32 building_id	= 2;	// 建筑ID
	int64 start_time	= 3;	// 工作开始时间
	int64 end_time		= 4;	// 工作到期时间(真实时间，服务器用)	
  int64 expired_time = 5; // 使用到期时间戳, 0表示永久有效
  int64 work_time = 6;    // 工作时长
}

message BuildQueueInfo
{
  repeated BuildWorkInfo works = 1;
}

// 战略值类型
enum CityStrategyType
{
  kCityStrategyType_None = 0;
  kCityStrategyType_Military = 1;     // 军事
  kCityStrategyType_Economy = 2;      // 经济
  kCityStrategyType_Develop = 3;      // 发展
}

message StrategyInfo
{
  uint32  strategy_id   = 1;
  int64   activate_time = 2;
  int64   next_lord_skill_time = 3;
}

// 横向道路数据
message RoadLineInfo
{
  uint32 x  = 1;        // 横坐标
  repeated uint32 v = 2;  // 元素值（道路类型)
}

// 道路整行数据
message RoadRowInfo
{
  uint32 y = 1;               // 纵坐标
  repeated RoadLineInfo e = 2;  // 行数据
}

// 内城道路数据
message CityRoadInfo
{
  repeated RoadRowInfo rows   = 1; 
}

// 单点道路数据
message RoadItemInfo
{
  CityCoord coord   = 1;  // 坐标
  uint32  value     = 2;  // 道路类型
}

// 建筑收纳容器
message CityContainerInfo
{
  map<uint32, uint32> buildings = 1;  // 建筑类型, 数量
  map<uint32, uint32> roads = 2;      // 道路类型， 数量
}

// 内城方案
message CityThemeInfo
{
	repeated protomsg.BuildingInfo buildings = 1;
	CityRoadInfo road = 2;
}

// 内城信息
message CityInfo
{  
	repeated BuildingInfo buildings = 1;  // 建筑信息
	CityRoadInfo road  = 2; // 道路信息
	CityContainerInfo container		= 3;	// 装饰建筑，道路收纳容器
	repeated CityThemeInfo themes = 4;	// 内城布局
  uint32 main_theme = 5;              // 当前布局索引号
  bool forbid_copy  = 6;              // 是否禁止复制布局
}
